--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
       <link href="style.css" rel="stylesheet" type="text/css" />
       <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
       <link rel="icon" href="files/capy.png" type="image/png">
+      
       <title>Kunal Purkayastha</title>
   </head>
-  <body>
+  <body> 
     <header>
       <h1>Kunal Purkayastha</h1>
     </header>
+    <button id="scroll-to-top-btn">
+      <img src="files/scroll.png" id="scroll-button">
+    </button> 
     <nav>
       <ul>
         <li><a href="#about">About Me</a></li>
@@ -49,7 +53,7 @@
       </section>
       <section id="contact">
         <h2>Contact</h2>
-        <form>
+        <form id="contact-form">
           <label for="name">Name:</label>
           <input type="text" id="name" name="name" style="text-align: center;" required>
           <label for="email">Email:</label>
@@ -63,6 +67,6 @@
     <footer>
       <p>Copyright ©2023 Kunal Purkayastha</p>
     </footer>
-
+    <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
