--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
             <h3>Project 2: Twitter BOT</h3>
             <p>I have created a Twitter bot using Python and the Tweepy library. The bot automatically sends an image tweet every 4 hours, pulling the images <span id="dots2">... </span><span id="more2">from a local storage directory. The use of the Tweepy library allows for easy integration with the Twitter library, allowing the bot to automatically post tweets at regular intervals. The bot uses Python to access the local storage, select an image and post it on Twitter with a message. This bot will help in automatically posting images on twitter at regular intervals, and it can be used for various purposes such as social media marketing, promoting a product, or for personal use.</span><a onclick="readFunction2()" id="read-more-button2">Read more</a></p>
           </li>
+          <li>
+            <h3>Project 3: Blogging Website</h3>
+            <p>I have created a fully functional blog website using the Django web framework. The website includes a login and registration system, allowing  <span id="dots3">... </span><span id="more3">users to create their own account and accessthe blog's features. Users are able to read and comment on different blog posts, with the ability to create and manage their own comments. Additionally, the website allows users to create and manage their own blog posts, giving them the ability to share their thoughts and ideas with the community. Overall, I have implemented a comprehensive and user-friendly blog platform, making it easy for users to engage with the content and connect with others. With the help of Django, I have built a robust and scalable website that can handle a large number of users and a wide variety of features.</span><a onclick="readFunction3()" id="read-more-button3">Read more</a></p>
+          </li>
         </ul>
       </section>
       <section id="contact">
