--- a/index.html
+++ b/index.html
@@ -43,19 +43,34 @@
         <ul>
           <li>
             <h3>Project 1: Bulk SMS sender</h3>
-            <p>I have created a GUI application using Python and the Fast2SMS API for ONGC (Oil and Natural Gas Corporation). This application allows <span id="dots">... </span><span id="more">officers at ONGC to send SMS messages in bulk to the employees. This will help the officers to send important updates and announcements to the employees in a quick and efficient manner. The use of the Fast2SMS API allows for easy integration with the SMS messaging service, while the GUI interface provides a user-friendly experience. This application will help to improve communication and productivity within the organization.</span><a onclick="readFunction1()" id="read-more-button">Read more</a></p>
+            <p>I have created a GUI application using Python and the Fast2SMS API for ONGC (Oil and Natural Gas Corporation). This application allows <span id="dots">... </span><span id="more">officers at ONGC to send SMS messages in bulk to the employees. This will help the officers to send important updates and announcements to the employees in a quick and efficient manner. The use of the Fast2SMS API allows for easy integration with the SMS messaging service, while the GUI interface provides a user-friendly experience. This application will help to improve communication and productivity within the organization. </span><a onclick="readFunction1()" id="read-more-button">Read more</a></p>
             
           </li>
           <br>
           <li>
             <h3>Project 2: Twitter BOT</h3>
-            <p>I have created a Twitter bot using Python and the Tweepy library. The bot automatically sends an image tweet every 4 hours, pulling the images <span id="dots2">... </span><span id="more2">from a local storage directory. The use of the Tweepy library allows for easy integration with the Twitter library, allowing the bot to automatically post tweets at regular intervals. The bot uses Python to access the local storage, select an image and post it on Twitter with a message. This bot will help in automatically posting images on twitter at regular intervals, and it can be used for various purposes such as social media marketing, promoting a product, or for personal use.</span><a onclick="readFunction2()" id="read-more-button2">Read more</a></p>
+            <p>I have created a Twitter bot using Python and the Tweepy library. The bot automatically sends an image tweet every 4 hours, pulling the images <span id="dots2">... </span><span id="more2">from a local storage directory. The use of the Tweepy library allows for easy integration with the Twitter library, allowing the bot to automatically post tweets at regular intervals. The bot uses Python to access the local storage, select an image and post it on Twitter with a message. This bot will help in automatically posting images on twitter at regular intervals, and it can be used for various purposes such as social media marketing, promoting a product, or for personal use. </span><a onclick="readFunction2()" id="read-more-button2">Read more</a></p>
           </li>
           <li>
             <h3>Project 3: Blogging Website</h3>
-            <p>I have created a fully functional blog website using the Django web framework. The website includes a login and registration system, allowing  <span id="dots3">... </span><span id="more3">users to create their own account and accessthe blog's features. Users are able to read and comment on different blog posts, with the ability to create and manage their own comments. Additionally, the website allows users to create and manage their own blog posts, giving them the ability to share their thoughts and ideas with the community. Overall, I have implemented a comprehensive and user-friendly blog platform, making it easy for users to engage with the content and connect with others. With the help of Django, I have built a robust and scalable website that can handle a large number of users and a wide variety of features.</span><a onclick="readFunction3()" id="read-more-button3">Read more</a></p>
+            <p>I have created a fully functional blog website using the Django web framework. The website includes a login and registration system, allowing  <span id="dots3">... </span><span id="more3">users to create their own account and accessthe blog's features. Users are able to read and comment on different blog posts, with the ability to create and manage their own comments. Additionally, the website allows users to create and manage their own blog posts, giving them the ability to share their thoughts and ideas with the community. Overall, I have implemented a comprehensive and user-friendly blog platform, making it easy for users to engage with the content and connect with others. With the help of Django, I have built a robust and scalable website that can handle a large number of users and a wide variety of features. </span><a onclick="readFunction3()" id="read-more-button3">Read more</a></p>
           </li>
         </ul>
+      </section>
+      <h2 id="cert">Certifications</h2>
+      <section id="certificates">
+        <div class="ibm-container">
+          <img src="files/certificates/ibm.png" alt="image" id="ibm-image">
+          <p id="ibm-caption">CV0101EN: Computer Vision and Image Processing Fundamentals</p>
+        </div>
+        <div class="ongc-container">
+          <img src="files/certificates/ongc.png" alt="image" id="ongc-image">
+          <p id="ongc-caption">Summer Industrial Training certificate for developing a software</p>
+        </div>
+        <div class="tecnoesis-container">
+          <img src="files/certificates/tecnoesis.png" alt="image" id="tecnoesis-image">
+          <p id="tecnoesis-caption">Tecnoesis '18: Runner up in Archinova under module 'Smart City'</p>
+        </div>
       </section>
       <section id="contact">
         <h2>Contact</h2>
