--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li><a href="#about" style="color: #FFFFFF; text-decoration: underline;">About Me</a></li>
         <li><a href="#projects" style="color: #FFFF00; text-decoration: underline;">Projects</a></li>
         <li><a href="#contact" style="color: #D3D3D3; text-decoration: underline;">Contact</a></li>
-        <li><a href="#contact" style="color: #ADD8E6; text-decoration: underline;">Why kpbara?</a></li>
+        <!--<li><a href="kpbara.html" style="color: #ADD8E6; text-decoration: underline;">Why kpbara?<a><li>-->
       </ul>
     </nav>
     <main>
