--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <div class="ongc-container">
           <img src="files/certificates/ongc.png" alt="image" id="ongc-image">
-          <p id="ongc-caption">Summer Industrial Training certificate for developing a software</p>
+          <p id="ongc-caption">ONGC: Summer Industrial Training certificate for developing a software</p>
         </div>
         <div class="tecnoesis-container">
           <img src="files/certificates/tecnoesis.png" alt="image" id="tecnoesis-image">
