--- a/kpbara.html
+++ b/kpbara.html
@@ -10,7 +10,14 @@
     <title>kpbara?</title>
 </head>
 <body>
-    <img src="files/pullup.png" alt="">
-    <h1>BECAUSE I PULL UP</h1>
+    <div class="container">
+        <img src="files/pullup.png" alt="">
+        <div id="words">
+            <h1>BECAUSE&nbsp;</h1>
+            <h1>I&nbsp;</h1>
+            <h1>PULL&nbsp;</h1>
+            <h1>UP</h1>
+        </div>
+      </div>
 </body>
 </html>
