Separated projects page

--- a/projects/index.html
+++ b/projects/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <link href="style.css" rel="stylesheet" type="text/css" />
+      <link href="../style.css" rel="stylesheet" type="text/css" />
       <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
       <link rel="icon" href="files/capy.png" type="image/png">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,28 +16,13 @@
     </button> 
     <nav>
       <ul>
-        <li><a href="#about" style="color: #FFFFFF; text-decoration: underline;">About Me</a></li>
+        <li><a href="../#about" style="color: #FFFFFF; text-decoration: underline;">About Me</a></li>
         <li><a href="/projects" style="color: #FFFF00; text-decoration: underline;">Projects</a></li>
         <li><a href="#contact" style="color: #D3D3D3; text-decoration: underline;">Contact</a></li>
         <!--<li><a href="kpbara.html" style="color: #ADD8E6; text-decoration: underline;">Why kpbara?<a><li>-->
       </ul>
     </nav>
     <main>
-        <div class="profile-pic">
-            <img src="files/dp.jpg" alt="Kunal">
-        </div>
-      <section id="about">
-        <h2>About Me</h2>
-        <p>I am a student of B.Tech in Information Technology at Sikkim Manipal Institute of Technology. I have a strong background in programming, with experience in a variety of languages including C++, C, Python, and Java. I have a deep understanding of image processing, computer vision, and machine learning, which I have developed through various projects and coursework.
-            <br><br>
-            My passion is working with deep learning techniques and I have a great deal of experience working with CNNs and Transformers. I have been able to apply this knowledge to various projects, including image classification and object detection, and have been able to achieve state-of-the-art results.
-            <br><br>
-            In addition to my technical skills, I have also gained a wealth of experience through freelancing services, where I have worked on a variety of projects for clients. This has allowed me to develop a strong sense of problem-solving and the ability to work independently. I also have a solid foundation in data structures and algorithms through my studies in DSA.
-            <br><br>
-            I am always looking to expand my knowledge and skills and have had the opportunity to work with governmental organizations to gain more experience in the field. I am also familiar with a variety of editing software such as Photoshop, After Effects, and Premiere Pro, which I have used to create visually appealing and engaging content. I am also experienced in GUI design using python which I have used to create user-friendly interfaces.
-            <br><br>
-            Overall, I am a highly motivated and skilled individual with a strong background in both technical and creative fields. I am constantly striving to learn and improve, and I am eager to apply my skills and experience to new challenges and opportunities.</p>
-      </section>
       <section id="projects">
         <h2>Projects</h2>
         <ul>
@@ -56,33 +41,6 @@
             <p>I have created a fully functional blog website using the Django web framework. The website includes a login and registration system, allowing  <span id="dots3">... </span><span id="more3">users to create their own account and accessthe blog's features. Users are able to read and comment on different blog posts, with the ability to create and manage their own comments. Additionally, the website allows users to create and manage their own blog posts, giving them the ability to share their thoughts and ideas with the community. Overall, I have implemented a comprehensive and user-friendly blog platform, making it easy for users to engage with the content and connect with others. With the help of Django, I have built a robust and scalable website that can handle a large number of users and a wide variety of features. </span><a onclick="readFunction3()" id="read-more-button3">Read more</a></p>
           </li>
         </ul>
-      </section>
-      <h2 id="cert">Certifications</h2>
-      <section id="certificates">
-        <div class="ibm-container ">
-          <img src="files/certificates/ibm.png" alt="image" id="ibm-image">
-          <p id="ibm-caption">CV0101EN: Computer Vision and Image Processing Fundamentals</p>
-        </div>
-        <div class="ongc-container">
-          <img src="files/certificates/ongc.png" alt="image" id="ongc-image">
-          <p id="ongc-caption">ONGC: Summer Industrial Training certificate for developing a software</p>
-        </div>
-        <div class="tecnoesis-container">
-          <img src="files/certificates/tecnoesis.png" alt="image" id="tecnoesis-image">
-          <p id="tecnoesis-caption">Tecnoesis '18: Runner up in Archinova under module 'Smart City'</p>
-        </div>
-      </section>
-      <section id="contact">
-        <h2>Contact</h2>
-        <form id="contact-form">
-          <label for="name">Name:</label>
-          <input type="text" id="name" name="name" style="text-align: center;" required>
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" style="text-align: center;" required>
-          <label for="message">Message:</label>
-          <textarea id="message" name="message" rows="8" required></textarea>
-          <input type="submit" value="Send">
-        </form>
       </section>
     </main>
     <footer>
