Updated Javascript source

--- a/projects/index.html
+++ b/projects/index.html
@@ -46,6 +46,6 @@
     <footer>
       <p>Copyright ©2023 Kunal Purkayastha</p>
     </footer>
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="../app.js"></script>
   </body>
 </html>
